Updated cover page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/home.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <title>Tomato</title>
 </head>
 
@@ -32,11 +36,11 @@
             <h1>Tomato</h1>
             <p class="lead">Welcome to Tomato! <br>View our amazing selection of restaurants available at cheap prices
                 all across the USA. <br> Feel free to add your own restaurants and review others!</p>
-            <a href="/restaurants" class="btn btn-lg btn-secondary fw-bold bg-white">View
+            <a href="/restaurants" class="btn btn-lg btn-danger fw-bold">View
                 Restaurants</a>
         </main>
 
-        <footer class="mt-auto text-white-50">
+        <footer class="mt-auto text-white">
             <p>&copy; 2023 Tomato</p>
         </footer>
     </div>
