--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,25 +4,39 @@
 
 body {
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("/images/cover.avif");
   background-size: cover;
   background-position: center;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
+h1 {
+  font-family: "Work Sans", sans-serif;
+  font-style: italic;
+  font-size: 5rem;
+  font-weight: 900;
+}
+
+h3 {
+  font-family: "Work Sans", sans-serif;
+  font-style: italic;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
 .nav-link {
   padding: 0.25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
+  color: white;
   margin-left: 1rem;
   border-bottom: 0.25rem solid transparent;
+  font-size: 1.2rem;
 }
 
 .nav-link:hover {
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom: 0.25rem solid rgba(255, 255, 255, 0.5);
+  color: white;
+  border-bottom: 0.25rem solid white;
 }
 
 .nav-link.active {
@@ -34,4 +48,9 @@ body {
 .btn-secondary:hover {
   color: #000;
   text-shadow: none;
+}
+
+.lead {
+  font-weight: 500;
+  margin: 1rem 0;
 }
