--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,6 +11,7 @@
     <link crossorigin="anonymous" href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
     <link rel="stylesheet" href="/styles/app.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 
 <body class="d-flex flex-column vh-100">
