--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,6 +10,10 @@
     <title>Tomato</title>
     <link crossorigin="anonymous" href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,600;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/styles/app.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
