--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container text-center">
-        <span class="text-muted">&copy; Tomato 2023</span>
+        <span class="text-white">&copy; Tomato 2023</span>
     </div>
 </footer>
 
