--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -7,3 +7,45 @@
   width: 100%;
   height: 300px;
 }
+
+.navbar-brand {
+  font-family: "Work Sans", sans-serif;
+  font-style: italic;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+.nav-link {
+  color: white !important;
+  margin-left: 1rem;
+  border-bottom: 0.25rem solid transparent;
+  font-size: 1.2rem;
+}
+
+.nav-link:hover {
+  color: white;
+  border-bottom: 0.25rem solid white;
+}
+
+.nav-link.active {
+  color: white;
+  border-bottom: 0.25rem solid white;
+}
+
+.restaurant-head {
+  font-family: "Work Sans", sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.add-restaurant {
+  font-size: 1.3rem;
+}
+
+.card {
+  text-align: center;
+}
+
+form {
+  text-align: left;
+}
