--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,10 +1,10 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="container d-flex justify-content-center align-items-center mb-4">
+<div class="container login d-flex justify-content-center align-items-center mb-4">
     <div class="row flex-fill">
         <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
             <div class="card shadow">
-                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                <img src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
                     alt="" class="card-img-top" />
                 <div class="card-body">
                     <h5 class="card-title">Login</h5>
