Fixed home page pic

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -5,7 +5,7 @@
 body {
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url("/images/cover.avif");
+    url("../images/cover.avif");
   background-size: cover;
   background-position: center;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
