--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/home.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="icon" type="image/x-icon" href="/Images/favicon.png" />
     <title>Tomato</title>
-</head>
+  </head>
 
-<body class="d-flex vh-100 text-center text-white bg-dark">
+  <body class="d-flex vh-100 text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="mb-auto">
-            <div>
-                <h3 class="float-md-start mb-0"><a href="/">Tomato</a></h3>
-                <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a href="/restaurants" class="nav-link">Restaurants</a>
-                    <% if(!currentUser){ %>
-                    <a href="/login" class="nav-link">Login</a>
-                    <a href="/register" class="nav-link">Register</a>
-                    <% }else{ %>
-                    <a href="/logout" class="nav-link">Logout</a>
-                    <% } %>
-                </nav>
-            </div>
-        </header>
-        <main class="px-3">
-            <h1>Tomato</h1>
-            <p class="lead">Welcome to Tomato! <br>View our amazing selection of restaurants available at cheap prices
-                all across the USA. <br> Feel free to add your own restaurants and review others!</p>
-            <a href="/restaurants" class="btn btn-lg btn-danger fw-bold">View
-                Restaurants</a>
-        </main>
+      <header class="mb-auto">
+        <div>
+          <h3 class="float-md-start mb-0"><a href="/">Tomato</a></h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a href="/restaurants" class="nav-link">Restaurants</a>
+            <% if(!currentUser){ %>
+            <a href="/login" class="nav-link">Login</a>
+            <a href="/register" class="nav-link">Register</a>
+            <% }else{ %>
+            <a href="/logout" class="nav-link">Logout</a>
+            <% } %>
+          </nav>
+        </div>
+      </header>
+      <main class="px-3">
+        <h1>Tomato</h1>
+        <p class="lead">
+          Welcome to Tomato! <br />View our amazing selection of restaurants
+          available at cheap prices all across the USA. <br />
+          Feel free to add your own restaurants and review others!
+        </p>
+        <a href="/restaurants" class="btn btn-lg btn-danger fw-bold"
+          >View Restaurants</a
+        >
+      </main>
 
-        <footer class="mt-auto text-white">
-            <p>&copy; 2023 Tomato</p>
-        </footer>
+      <footer class="mt-auto text-white">
+        <p>&copy; 2023 Tomato</p>
+      </footer>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
