--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -3,37 +3,49 @@
 <div id="cluster-map"></div>
 
 <div class="d-flex justify-content-between align-items-center my-4">
-    <h1 class="text-center mx-3 d-inline restaurant-head">All restaurants!</h1>
-    <a href="/restaurants/new" class="btn btn-info add-restaurant ">Add Restaurant</a>
+  <h1 class="text-center mx-3 d-inline restaurant-head">All restaurants!</h1>
+  <a href="/restaurants/new" class="btn btn-info add-restaurant"
+    >Add Restaurant</a
+  >
 </div>
 
 <div class="row">
-    <% for(let restaurant of restaurants){ %>
-    <div class="col-md-4 mb-5">
-        <div class="card">
-            <% if(restaurant.images.length){ %>
-            <img crossorigin="anonymous" src="<%= restaurant.images[0].url %>" alt="" class="card-img-top">
-            <% } else{ %>
-            <img crossorigin="anonymous"
-                src="https://res.cloudinary.com/dyzokyko2/image/upload/v1684677715/Tomato/t9io4rojflvj1ovhpy4a.jpg"
-                alt="" class="card-img-top">
-            <% } %>
-            <div class="card-body">
-                <h5 class="card-title"><%= restaurant.title %></h5>
-                <p class="card-text"><%= restaurant.description %></p>
-                <p class="card-text">
-                    <small class="text-muted"><%= restaurant.location %></small>
-                </p>
-                <a class="btn btn-primary" href="/restaurants/<%= restaurant._id %>">View <%= restaurant.title %></a>
-            </div>
-        </div>
+  <% for(let restaurant of restaurants){ %>
+  <div class="col-md-4 mb-5">
+    <div class="card">
+      <% if(restaurant.images.length){ %>
+      <img
+        crossorigin="anonymous"
+        src="<%= restaurant.images[0].url %>"
+        alt=""
+        class="card-img-top"
+      />
+      <% } else{ %>
+      <img
+        crossorigin="anonymous"
+        src="https://res.cloudinary.com/dyzokyko2/image/upload/v1684677715/Tomato/t9io4rojflvj1ovhpy4a.jpg"
+        alt=""
+        class="card-img-top"
+      />
+      <% } %>
+      <div class="card-body">
+        <h5 class="card-title"><%= restaurant.title %></h5>
+        <p class="card-text"><%= restaurant.description %></p>
+        <p class="card-text">
+          <small class="text-muted"><%= restaurant.location %></small>
+        </p>
+        <a class="btn btn-primary" href="/restaurants/<%= restaurant._id %>"
+          >View <%= restaurant.title %></a
+        >
+      </div>
     </div>
-    <% } %>
+  </div>
+  <% } %>
 </div>
 
 <script>
-    const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
-    const restaurants = { features: <%- JSON.stringify(restaurants) %>};
+  const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
+  const restaurants = { features: <%- JSON.stringify(restaurants) %>};
 </script>
 
 <script src="/scripts/clusterMap.js"></script>
